Fix: update assignment status to 'returned' when deactivating employee, ensure soft delete and asset logic are correct

--- a/templates/assignment_history.html
+++ b/templates/assignment_history.html
@@ -10,7 +10,7 @@
         <div class="card-body">
             <form class="row g-3 filter-form">
                 <div class="col-md-4">
-                    <input type="text" class="form-control" id="searchInput" placeholder="{{ _('履歴を検索...') }}">
+                    <input type="text" class="form-control" id="searchInput" placeholder="社員名・社員コード・資産名・資産コードで検索...">
                 </div>
                 <div class="col-md-4">
                     <select class="form-select" id="statusFilter">
