--- a/templates/my_assets.html
+++ b/templates/my_assets.html
@@ -145,7 +145,7 @@ function loadMyAssets() {
                         let row = '<tr class="asset-row">';
                         row += '<td><span class="asset-code">' + asset.asset_code + '</span></td>';
                         row += '<td><span class="asset-name">' + asset.name + '</span></td>';
-                        row += '<td><span class="badge asset-type">' + asset.type + '</span></td>';
+                        row += '<td><span class="badge asset-type">' + asset.type_jp + '</span></td>';
                         row += '<td>' + (asset.status || 'N/A') + '</td>';
                         row += '<td>' + asset.assigned_date + '</td>';
                         row += '<td>';
